# pathtracer

./: .gitattributes  CMakeLists.txt  README.md
shaders/: pathtracer.comp
src/: extensions.c  main.c  utils.c  utils.h
